lib/stratiform/res/test/stratiform/corpus/pos/tabulation-empty-middle-heading.tel
# ID   #  # Age
Alice     30
