lib/stratiform/res/test/stratiform/corpus/neg/e108-trailing-spaces-tabulated-row.tel
# Name  # Age
Alice   30   
